--- a/practice.html
+++ b/practice.html
@@ -189,21 +189,21 @@
   <!-- 円グラフ3つ横並び -->
   <div style="display: flex; justify-content: space-around; gap: 20px; flex-wrap: wrap;">
 
-    <!-- 円グラフ①: 全体の使用状況 -->
+    <!-- 円グラフ①: 現在の使用状況 -->
     <div style="background-color: #f0f8ff; padding: 15px; border-radius: 10px; text-align: center;">
-      <h3>全体の使用状況</h3>
+      <h3>現在の使用状況</h3>
       <canvas id="usagePieChart" width="400" height="400"></canvas>
     </div>
 
-    <!-- 円グラフ②: 使用中テーブル構成 -->
+    <!-- 円グラフ②: 各テーブルの使用回数 -->
     <div style="background-color: #fff0f5; padding: 15px; border-radius: 10px; text-align: center;">
-      <h3>使用中テーブル構成</h3>
+      <h3>各テーブルの使用回数</h3>
       <canvas id="countPieChart" width="400" height="400"></canvas>
     </div>
 
-    <!-- 円グラフ③: 使用時間構成 -->
+    <!-- 円グラフ③: 累計使用時間構成 -->
     <div style="background-color: #f5fff0; padding: 15px; border-radius: 10px; text-align: center;">
-      <h3>使用時間構成</h3>
+      <h3>累計使用時間構成</h3>
       <canvas id="timePieChart" width="400" height="400"></canvas>
     </div>
 
