--- a/table.html
+++ b/table.html
@@ -212,7 +212,7 @@
   <!-- 棒グラフ -->
   <div style="margin-top: 40px; background-color: #f9f9f9; padding: 20px; border-radius: 10px;">
     <h3>使用状況（回数・平均滞在時間）</h3>
-    <canvas id="barChart"></canvas>
+  <canvas id="usageChart" width="400" height="300"></canvas>
   </div>
 </section>
 
