--- a/table.html
+++ b/table.html
@@ -388,67 +388,69 @@ async function drawCharts() {
       cumulativeCount: usageTime[table]
     };
   }
+
   const ctx = document.getElementById("usageChart").getContext("2d");
 
-  const tableIds = Object.keys(tableStats);
-  const usageCounts = tableIds.map(id => tableStats[id].count); // 利用回数
-  const cumulativeCounts = tableIds.map(id => tableStats[id].cumulativeCount || 0); // 累計回数（要フィールド）
+// usageCount は既に全期間で集計されている
+const tableIds = Object.keys(usageCount);
+const usageCounts = tableIds.map(id => usageCount[id]);
+const cumulativeCounts = usageCounts; // 累計も全期間の usageCount を使用
 
-  new Chart(ctx, {
-    type: "bar",
-    data: {
-      labels: tableIds,
-      datasets: [
-        {
-          label: "利用回数",
-          data: usageCounts,
-          backgroundColor: "rgba(54, 162, 235, 0.7)"
-        },
-        {
-          label: "累計使用回数",
-          data: cumulativeCounts,
-          backgroundColor: "rgba(255, 159, 64, 0.7)"
-        }
-      ]
-    },
-    options: {
-      responsive: true,
-      plugins: {
-        title: {
-          display: true,
-          text: "テーブル別 使用回数・累計回数"
-        },
-        tooltip: {
-          mode: "index",
-          intersect: false
-        },
-        legend: {
-          position: "top"
-        }
+new Chart(ctx, {
+  type: "bar",
+  data: {
+    labels: tableIds,
+    datasets: [
+      {
+        label: "利用回数（当日）", // ←必要であれば期間名を分けてもOK
+        data: usageCounts,
+        backgroundColor: "rgba(54, 162, 235, 0.7)"
       },
-      interaction: {
-        mode: "nearest",
-        axis: "x",
+      {
+        label: "累計使用回数（全期間）",
+        data: cumulativeCounts,
+        backgroundColor: "rgba(255, 99, 132, 0.7)"
+      }
+    ]
+  },
+  options: {
+    responsive: true,
+    plugins: {
+      title: {
+        display: true,
+        text: "テーブル別 利用回数・累計使用回数"
+      },
+      tooltip: {
+        mode: "index",
         intersect: false
       },
-      scales: {
-        x: {
-          title: {
-            display: true,
-            text: "テーブル番号"
-          }
-        },
-        y: {
-          beginAtZero: true,
-          title: {
-            display: true,
-            text: "回数"
-          }
+      legend: {
+        position: "top"
+      }
+    },
+    interaction: {
+      mode: "nearest",
+      axis: "x",
+      intersect: false
+    },
+    scales: {
+      x: {
+        title: {
+          display: true,
+          text: "テーブル番号"
+        }
+      },
+      y: {
+        beginAtZero: true,
+        title: {
+          display: true,
+          text: "回数"
         }
       }
     }
-  });
-}
+  }
+});
+
 
 drawCharts();
 
