--- a/admin.html
+++ b/admin.html
@@ -7,6 +7,9 @@
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-messaging-compat.js"></script>
+
+
   <style>
     body {
       font-family: sans-serif;
@@ -163,6 +166,9 @@
     };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
+    const messaging = firebase.messaging();
+
+    const SERVER_KEY = "7b5031dc61aa522edd787aa0a3abb488c811c789"; 
 
     const ticketMap = {};
     
@@ -172,24 +178,45 @@
       return d.toLocaleString("ja-JP", options);
     }
 
-function renderQueue() {
-  db.collection("queue").orderBy("timestamp").onSnapshot(snapshot => {
-    const allDocs = snapshot.docs;
+      function sendNotification(token, title, body) {
+      fetch("https://fcm.googleapis.com/fcm/send", {
+        method: "POST",
+        headers: {
+          "Authorization": "key=" + SERVER_KEY,
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({
+          to: token,
+          notification: {
+            title: title,
+            body: body,
+            click_action: "https://qr-webpage.vercel.app/admit.html",
+            icon: "/icon.png"
+          }
+        })
+      })
+      .then(res => res.json())
+      .then(data => console.log("通知送信:", data))
+      .catch(err => console.error("通知エラー:", err));
+    }
 
-    // 表示対象: waiting と entered
-    const visibleDocs = allDocs.filter(doc => {
-      const status = doc.data().status;
-      return status === "waiting" || status === "entered";
-    });
+    function renderQueue() {
+      db.collection("queue").orderBy("timestamp").onSnapshot(snapshot => {
+        const allDocs = snapshot.docs;
+        const visibleDocs = allDocs.filter(doc => {
+          const status = doc.data().status;
+          return status === "waiting" || status === "entered";
+        });
 
-    const list = document.getElementById("queueList");
-    list.innerHTML = "";
+        const list = document.getElementById("queueList");
+        list.innerHTML = "";
 
-    allDocs.forEach((doc, index) => {
-      if (!(doc.id in ticketMap)) {
-        ticketMap[doc.id] = index + 1;
-      }
-    });
+        allDocs.forEach((doc, index) => {
+          if (!(doc.id in ticketMap)) {
+            ticketMap[doc.id] = index + 1;
+          }
+        });
+
 
     visibleDocs.forEach(doc => {
       const data = doc.data();
@@ -213,6 +240,11 @@ function renderQueue() {
         btnEnter.textContent = "入店通知";
         btnEnter.onclick = () => {
           db.collection("queue").doc(doc.id).update({ status: "entered" });
+               if (data.token) {
+                sendNotification(data.token, "入店のご案内", "順番が来ました。画面を開いてください。");
+              } else {
+                console.warn("通知トークンなし");
+              }
         };
 
         btnGroup.appendChild(btnEnter);
