--- a/practice.html
+++ b/practice.html
@@ -1,159 +1,46 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>店外待ち管理（店員用）</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>混雑傾向分析</title>
+
+  <!-- Tailwind CSS (必要に応じて調整) -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Chart.js -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+  <!-- Swiper.js CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+  <!-- Firebase SDK (バージョンはプロジェクトに合わせて) -->
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <style>
-    body {
-      font-family: sans-serif;
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(to right, #c2e9fb, #a1c4fd);
-    }
-     header {
-      background-color: #2c3e50;
-      color: white;
-    }
-
-    .header-bar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 12px 20px;
-    }
-
-    .header-title {
-      font-size: 1.5em;
-      font-weight: bold;
-    }
-
-    .header-links {
-      display: flex;
-      gap: 20px;
-    }
-
-    .header-links a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-    }
-
-    .header-links a:hover {
-      text-decoration: underline;
-    }
-
-    .menu-button {
-      position: absolute;
-      left: 20px;
-      top: 12px;
-      width: 30px;
-      height: 24px;
-      cursor: pointer;
-      z-index: 1001;
-    }
-
-    .menu-button span {
-      display: block;
-      height: 4px;
-      background: white;
-      margin: 5px 0;
-      transition: 0.4s;
-    }
-
-    .drawer {
-      position: fixed;
-      top: 0;
-      left: -250px;
-      width: 250px;
-      height: 100%;
-      background-color: #34495e;
-      color: white;
-      transition: 0.3s;
-      z-index: 1000;
-      padding-top: 60px;
-    }
-
-    .drawer.open {
-      left: 0;
-    }
-
-    .drawer a {
-      display: block;
-      padding: 15px 20px;
-      text-decoration: none;
-      color: white;
-      font-weight: bold;
-      border-bottom: 1px solid #2c3e50;
-    }
-
-    .drawer a:hover {
-      background-color: #2c3e50;
-    }
-
-    main {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 30px 20px;
-    }
-    h1 {
-      text-align: center;
-      padding: 20px;
-    }
-    .queue-item {
-      background: #fff;
-      padding: 15px;
-      margin: 10px auto;
-      max-width: 500px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
-    .queue-item p {
-      margin: 5px 0;
-    }
-    .btn-group {
-      margin-top: 10px;
-    }
-    button {
-      margin-right: 10px;
-      padding: 6px 12px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .btn-enter { background: #2ecc71; color: white; }
-    .btn-exit { background: #e74c3c; color: white; }
-  </style>
 </head>
-<body>
-  <header>
-    <div class="menu-button">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-    <div class="header-bar">
-      <div class="header-title">　　　　　店内管理システム</div>
-      <div class="header-links">
-        <a href="#">マニュアル</a>
-        <a href="#">ログアウト</a>
-      </div>
-    </div>
-    <div class="drawer">
-      <a href="index.html">ホーム</a>
-      <a href="map.html">店内マップ</a>
-      <a href="histogram.html">混雑状況可視化</a>
-      <a href="admin.html">待ち管理</a>
-    </div>
-  </header>
-  <h1 style="display:none;" id="mainTitle">順番待ち管理（店員用）</h1>
-  <div id="queueList"></div>
+<body class="bg-gray-100 text-gray-900 px-4 py-6">
 
+  <h1 class="text-2xl font-bold mb-4">混雑傾向分析</h1>
+
+  <!-- ここに既存のヒストグラムや履歴が入っていると仮定 -->
+
+  <!-- ===== 新しい曜日別ヒストグラムセクション ===== -->
+  <h2 class="text-xl font-bold mt-10 mb-4">曜日別混雑傾向（1時間ごと）</h2>
+
+  <div class="swiper mySwiper w-full h-[400px] bg-white rounded-lg shadow">
+    <div class="swiper-wrapper">
+      <!-- JSで曜日ごとのスライド（グラフ）が追加されます -->
+    </div>
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-pagination"></div>
+  </div>
+
+  <!-- Firebase 初期化とカルーセルグラフ生成 -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script>
-    const firebaseConfig = {
+    // Firebase 設定
+   const firebaseConfig = {
       apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
       authDomain: "qr-visitor-log.firebaseapp.com",
       projectId: "qr-visitor-log",
@@ -161,102 +48,93 @@
       messagingSenderId: "304250341939",
       appId: "1:304250341939:web:b8d5b946590d1f852cf146"
     };
+
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
 
-    const ticketMap = {};
-    
-    function formatTime(iso) {
-      const d = new Date(iso);
-      const options = { month: 'numeric', day: 'numeric', hour: '2-digit', minute: '2-digit' };
-      return d.toLocaleString("ja-JP", options);
-    }
+    // 曜日 → 時間帯ごとのカウント（0〜23時）
+    const weeklyData = {
+      '日': Array(24).fill(0),
+      '月': Array(24).fill(0),
+      '火': Array(24).fill(0),
+      '水': Array(24).fill(0),
+      '木': Array(24).fill(0),
+      '金': Array(24).fill(0),
+      '土': Array(24).fill(0)
+    };
 
-function renderQueue() {
-  db.collection("queue").orderBy("timestamp").onSnapshot(snapshot => {
-    const allDocs = snapshot.docs;
+    const weekdayNames = ['日', '月', '火', '水', '木', '金', '土'];
 
-    // 表示対象: waiting と entered
-    const visibleDocs = allDocs.filter(doc => {
-      const status = doc.data().status;
-      return status === "waiting" || status === "entered";
+    db.collection("logs").get().then((querySnapshot) => {
+      querySnapshot.forEach((doc) => {
+        const data = doc.data();
+        if (data.type !== "enter") return;
+
+        const date = new Date(data.timestamp);
+        const day = weekdayNames[date.getDay()];
+        const hour = date.getHours();
+        weeklyData[day][hour]++;
+      });
+
+      // 曜日ごとのグラフをカルーセルに追加
+      const swiperWrapper = document.querySelector('.swiper-wrapper');
+
+      weekdayNames.forEach(day => {
+        const slide = document.createElement('div');
+        slide.className = 'swiper-slide flex items-center justify-center';
+
+        const canvas = document.createElement('canvas');
+        canvas.id = `chart-${day}`;
+        canvas.className = "w-full max-w-[90%] h-full";
+
+        slide.appendChild(canvas);
+        swiperWrapper.appendChild(slide);
+
+        new Chart(canvas, {
+          type: 'bar',
+          data: {
+            labels: Array.from({ length: 24 }, (_, i) => `${i}時`),
+            datasets: [{
+              label: `${day}曜日`,
+              data: weeklyData[day],
+              backgroundColor: 'rgba(54, 162, 235, 0.5)',
+              borderColor: 'rgba(54, 162, 235, 1)',
+              borderWidth: 1
+            }]
+          },
+          options: {
+            responsive: true,
+            plugins: {
+              title: {
+                display: true,
+                text: `${day}曜日の1時間ごとの来店数`
+              }
+            },
+            scales: {
+              y: {
+                beginAtZero: true
+              }
+            }
+          }
+        });
+      });
+
+      // Swiper 初期化
+      new Swiper(".mySwiper", {
+        slidesPerView: 1,
+        spaceBetween: 30,
+        pagination: {
+          el: ".swiper-pagination",
+          clickable: true
+        },
+        navigation: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev"
+        },
+        loop: true
+      });
     });
-
-    const list = document.getElementById("queueList");
-    list.innerHTML = "";
-
-    allDocs.forEach((doc, index) => {
-      if (!(doc.id in ticketMap)) {
-        ticketMap[doc.id] = index + 1;
-      }
-    });
-
-    visibleDocs.forEach(doc => {
-      const data = doc.data();
-      const ticketNumber = ticketMap[doc.id] || "?";
-
-      const item = document.createElement("div");
-      item.className = "queue-item";
-      item.innerHTML = `
-        <p><strong>番号札:</strong> ${ticketNumber}</p>
-        <p><strong>時刻:</strong> ${formatTime(data.timestamp)}</p>
-        <p><strong>状態:</strong> ${data.status}</p>
-        <div class="btn-group"></div>
-      `;
-
-      const btnGroup = item.querySelector(".btn-group");
-
-      // 入店通知（waiting のときのみ表示）
-      if (data.status === "waiting") {
-        const btnEnter = document.createElement("button");
-        btnEnter.className = "btn-enter";
-        btnEnter.textContent = "入店通知";
-        btnEnter.onclick = () => {
-          db.collection("queue").doc(doc.id).update({ status: "entered" });
-        };
-
-        btnGroup.appendChild(btnEnter);
-      }
-
-      // 入店確定（entered のときのみ表示）
-      if (data.status === "entered") {
-        const btnConfirm = document.createElement("button");
-        btnConfirm.textContent = "入店確定";
-        btnConfirm.style.backgroundColor = "#2980b9";
-        btnConfirm.style.color = "white";
-        btnConfirm.onclick = () => {
-          db.collection("queue").doc(doc.id).update({ status: "confirmed" });
-        };
-        btnGroup.appendChild(btnConfirm);
-      }
-
-      // キャンセル（waiting/entered のとき常に表示）
-      if (data.status === "waiting" || data.status === "entered") {
-        const btnCancel = document.createElement("button");
-        btnCancel.className = "btn-exit";
-        btnCancel.textContent = "キャンセル";
-        btnCancel.onclick = () => {
-          db.collection("queue").doc(doc.id).update({ status: "expired" });
-        };
-        btnGroup.appendChild(btnCancel);
-      }
-
-      list.appendChild(item);
-    });
-  });
-}
-
-
-  window.onload = () => {
-    document.getElementById("mainTitle").style.display = "block";
-    renderQueue();
-  };
-
-   document.addEventListener('DOMContentLoaded', function () {
-    document.querySelector('.menu-button').addEventListener('click', function () {
-      document.querySelector('.drawer').classList.toggle('open');
-    });
-  });
-</script>
+  </script>
 </body>
 </html>
+
