--- a/practice.html
+++ b/practice.html
@@ -1,127 +1,161 @@
+<!-- histogram.html 改良版：機能は前回通り・UIはGoogle風 -->
 <!DOCTYPE html>
 <html lang="ja">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>混雑傾向分析</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
   <style>
     body {
       font-family: sans-serif;
+      background: #f8f9fa;
       margin: 0;
-      padding: 20px;
-      background: #f9f9f9;
+      padding: 0;
     }
-
     h2 {
-      margin-bottom: 20px;
+      padding: 1rem;
+      margin: 0;
     }
-
-    .swiper {
-      width: 100%;
-      padding-bottom: 40px;
-    }
-
-    .swiper-slide {
+    .day-tabs {
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
+      padding: 0.5rem 0;
       background: #fff;
-      border-radius: 10px;
-      padding: 20px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      border-bottom: 1px solid #ccc;
     }
-
-    canvas {
-      max-height: 300px;
+    .day-tab {
+      cursor: pointer;
+      padding: 0.5rem 1rem;
+      border-radius: 20px;
+      background-color: #e9ecef;
+      transition: background 0.3s;
     }
-
-    .live-info {
-      margin: 10px 0;
-      font-size: 14px;
-      color: #d93025;
-      font-weight: bold;
+    .day-tab.active {
+      background-color: #007bff;
+      color: white;
+    }
+    .carousel {
+      display: flex;
+      overflow-x: auto;
+      scroll-snap-type: x mandatory;
+    }
+    .carousel-slide {
+      flex: none;
+      width: 100%;
+      padding: 2rem;
+      box-sizing: border-box;
+      scroll-snap-align: start;
+    }
+    .chart-container {
+      position: relative;
+      height: 300px;
+    }
+    .live-label {
+      color: red;
+      font-size: 0.9rem;
+      text-align: center;
+      margin-bottom: 0.5rem;
     }
   </style>
 </head>
-
 <body>
   <h2>混雑傾向分析</h2>
+  <div class="day-tabs" id="dayTabs"></div>
+  <div class="live-label" id="liveLabel">● ライブ：やや混んでいます</div>
+  <div class="carousel" id="carousel"></div>
 
-  <div class="swiper">
-    <div class="swiper-wrapper" id="chartContainer">
-      <!-- 曜日ごとのチャートがここに入る -->
-    </div>
-  </div>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
+    import {
+      getFirestore,
+      collection,
+      getDocs,
+    } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js";
 
-  <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-  <script>
-    const weekdays = ['日', '月', '火', '水', '木', '金', '土'];
-    const today = new Date().getDay();
+    const firebaseConfig = {
+      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
+      authDomain: "qr-visitor-log.firebaseapp.com",
+      projectId: "qr-visitor-log",
+      storageBucket: "qr-visitor-log.appspot.com",
+      messagingSenderId: "304250341939",
+      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
+    };
 
-    const sampleData = Array.from({ length: 7 }, (_, i) => ({
-      label: weekdays[i],
-      data: Array.from({ length: 24 }, () => Math.floor(Math.random() * 100))
-    }));
 
-    const chartContainer = document.getElementById('chartContainer');
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+    const days = ['日', '月', '火', '水', '木', '金', '土'];
+    const carousel = document.getElementById('carousel');
+    const dayTabs = document.getElementById('dayTabs');
+    const todayIndex = new Date().getDay();
 
-    sampleData.forEach((day, index) => {
-      const slide = document.createElement('div');
-      slide.className = 'swiper-slide';
+    const hourlyData = Array.from({ length: 7 }, () => Array(24).fill(0));
 
-      const liveIndex = new Date().getDay() === index ? new Date().getHours() : -1;
-
-      const liveInfo = document.createElement('div');
-      if (liveIndex >= 0) {
-        liveInfo.className = 'live-info';
-        liveInfo.textContent = 'ライブ：やや混んでいます';
+    const logsSnapshot = await getDocs(collection(db, 'logs'));
+    logsSnapshot.forEach(doc => {
+      const data = doc.data();
+      if (data.type === 'enter') {
+        const date = new Date(data.timestamp);
+        const dow = date.getDay();
+        const hour = date.getHours();
+        hourlyData[dow][hour]++;
       }
+    });
+
+    days.forEach((day, i) => {
+      const tab = document.createElement('div');
+      tab.className = 'day-tab' + (i === todayIndex ? ' active' : '');
+      tab.textContent = day;
+      tab.addEventListener('click', () => scrollToSlide(i));
+      dayTabs.appendChild(tab);
+
+      const slide = document.createElement('div');
+      slide.className = 'carousel-slide';
 
       const canvas = document.createElement('canvas');
-      canvas.id = `chart-${index}`;
-      slide.appendChild(document.createElement('h3')).textContent = `${day.label}曜日`;
-      if (liveIndex >= 0) slide.appendChild(liveInfo);
+      canvas.id = `chart-${i}`;
+      canvas.height = 300;
+
       slide.appendChild(canvas);
-      chartContainer.appendChild(slide);
+      carousel.appendChild(slide);
 
       new Chart(canvas.getContext('2d'), {
         type: 'bar',
         data: {
-          labels: Array.from({ length: 24 }, (_, i) => `${i}時`),
+          labels: [...Array(24).keys()].map(h => `${h}時`),
           datasets: [{
-            label: '混雑度',
-            data: day.data,
-            backgroundColor: day.data.map((_, i) => i === liveIndex ? 'rgba(217, 48, 37, 0.8)' : 'rgba(66, 133, 244, 0.6)')
+            label: '来店数',
+            data: hourlyData[i],
+            backgroundColor: [...Array(24).keys()].map(h => (i === todayIndex && h === new Date().getHours() ? 'red' : 'rgba(0,123,255,0.6)')),
+            borderRadius: 5,
+            barThickness: 10,
           }]
         },
         options: {
-          responsive: true,
+          scales: {
+            y: { beginAtZero: true }
+          },
           plugins: {
             legend: { display: false }
-          },
-          scales: {
-            y: {
-              beginAtZero: true,
-              ticks: { stepSize: 20 }
-            }
           }
         }
       });
     });
 
-    new Swiper('.swiper', {
-      slidesPerView: 1,
-      spaceBetween: 20,
-      initialSlide: today,
-      pagination: { el: '.swiper-pagination', clickable: true },
-      navigation: {
-        nextEl: '.swiper-button-next',
-        prevEl: '.swiper-button-prev'
-      }
-    });
+    function scrollToSlide(index) {
+      carousel.scrollTo({ left: index * carousel.clientWidth, behavior: 'smooth' });
+      document.querySelectorAll('.day-tab').forEach((tab, i) => {
+        tab.classList.toggle('active', i === index);
+      });
+    }
+
+    window.onload = () => {
+      scrollToSlide(todayIndex);
+    }
   </script>
 </body>
-
 </html>
-
-
